fixed footer overlaping content

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -7,8 +7,6 @@
   left: 0;
   color: rgba(255, 255, 255, 0.482);
   text-align: center;
-  position: relative;
-  top: 500px;
 }
 .SiteFooter a
 {
